[gd_scene load_steps=13 format=2]

[ext_resource path="res://addons/gSheet/scenes/spreadsheet/full/scenes/bottomBar/menuButton.gd" type="Script" id=1]
[ext_resource path="res://addons/gSheet/scenes/spreadsheet/full/scenes/bottomBar/bottomBar.gd" type="Script" id=2]
[ext_resource path="res://addons/gSheet/scenes/spreadsheet/full/scenes/bottomBar/MenuButtonCol.gd" type="Script" id=3]
[ext_resource path="res://addons/gSheet/scenes/spreadsheet/full/scenes/bottomBar/MenuButtonRow.gd" type="Script" id=4]
[ext_resource path="res://addons/gSheet/scenes/assets/arrow-square-right.png" type="Texture" id=5]
[ext_resource path="res://addons/gSheet/scenes/assets/close-rectangle.png" type="Texture" id=6]
[ext_resource path="res://addons/gSheet/scenes/assets/arrow-square-up.png" type="Texture" id=7]
[ext_resource path="res://addons/gSheet/highlightHover.gd" type="Script" id=8]
[ext_resource path="res://addons/gSheet/scenes/assets/arrow-square-left .png" type="Texture" id=9]
[ext_resource path="res://addons/gSheet/scenes/assets/search.png" type="Texture" id=10]
[ext_resource path="res://addons/gSheet/scenes/assets/arrow-square-down.png" type="Texture" id=11]
[ext_resource path="res://addons/gSheet/scenes/spreadsheet/full/scenes/bottomBar/MoveMenu.gd" type="Script" id=12]

[node name="HBoxContainer2" type="HBoxContainer"]
margin_top = 576.0
margin_right = 1024.0
margin_bottom = 600.0
script = ExtResource( 2 )

[node name="ButtonFromCSV" type="Control" parent="."]
margin_bottom = 24.0

[node name="FileDialog" type="FileDialog" parent="ButtonFromCSV"]
margin_right = 520.0
margin_bottom = 326.0
window_title = "Open a File"
mode = 0
access = 2
filters = PoolStringArray( "*.csv" )

[node name="csvOptions" type="WindowDialog" parent="ButtonFromCSV"]
margin_left = 222.0
margin_top = -378.0
margin_right = 578.0
margin_bottom = -189.0
rect_min_size = Vector2( 168, 86 )
window_title = "CSV Options"

[node name="VBoxContainer" type="VBoxContainer" parent="ButtonFromCSV/csvOptions"]
anchor_right = 1.0
anchor_bottom = 0.704
margin_bottom = 0.0639877
alignment = 1

[node name="hasHeadings" type="HBoxContainer" parent="ButtonFromCSV/csvOptions/VBoxContainer"]
margin_top = 42.0
margin_right = 356.0
margin_bottom = 66.0
size_flags_horizontal = 5
alignment = 1

[node name="Label" type="Label" parent="ButtonFromCSV/csvOptions/VBoxContainer/hasHeadings"]
margin_left = 103.0
margin_top = 5.0
margin_right = 225.0
margin_bottom = 19.0
text = "Contains Headings:"

[node name="CheckBoxHeadings" type="CheckBox" parent="ButtonFromCSV/csvOptions/VBoxContainer/hasHeadings"]
margin_left = 229.0
margin_right = 253.0
margin_bottom = 24.0

[node name="Delimeter" type="HBoxContainer" parent="ButtonFromCSV/csvOptions/VBoxContainer"]
margin_left = 129.0
margin_top = 70.0
margin_right = 227.0
margin_bottom = 90.0
size_flags_horizontal = 6
size_flags_vertical = 0
alignment = 1

[node name="LabelDelimiter" type="Label" parent="ButtonFromCSV/csvOptions/VBoxContainer/Delimeter"]
margin_right = 61.0
margin_bottom = 20.0
size_flags_vertical = 1
text = "Delimiter"
valign = 1

[node name="OptionButton" type="OptionButton" parent="ButtonFromCSV/csvOptions/VBoxContainer/Delimeter"]
margin_left = 65.0
margin_right = 98.0
margin_bottom = 20.0
text = ","
items = [ ",", null, false, 0, null, ";", null, false, 1, null ]
selected = 0

[node name="VBoxContainer2" type="VBoxContainer" parent="ButtonFromCSV/csvOptions"]
anchor_top = 0.767
anchor_right = 1.0
anchor_bottom = 0.893
margin_left = -1.0
margin_top = 0.0469971
margin_right = 1.0
margin_bottom = 0.0129852
size_flags_vertical = 7
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="ButtonFromCSV/csvOptions/VBoxContainer2"]
margin_top = 1.0
margin_right = 358.0
margin_bottom = 21.0
rect_pivot_offset = Vector2( 119, -204 )
alignment = 1

[node name="ButtonOk" type="Button" parent="ButtonFromCSV/csvOptions/VBoxContainer2/HBoxContainer"]
margin_left = 135.0
margin_right = 165.0
margin_bottom = 20.0
text = "Ok"

[node name="ButtonCancel" type="Button" parent="ButtonFromCSV/csvOptions/VBoxContainer2/HBoxContainer"]
margin_left = 169.0
margin_right = 223.0
margin_bottom = 20.0
text = "Cancel"

[node name="SearchDiag" type="Control" parent="."]
margin_left = 4.0
margin_right = 4.0
margin_bottom = 24.0

[node name="WindowDialog" type="WindowDialog" parent="SearchDiag"]
margin_top = -110.0
margin_right = 236.0
margin_bottom = 40.0
window_title = "Search"
resizable = true

[node name="MarginContainer" type="MarginContainer" parent="SearchDiag/WindowDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_right = -5.0

[node name="v" type="VBoxContainer" parent="SearchDiag/WindowDialog/MarginContainer"]
margin_right = 226.0
margin_bottom = 150.0
alignment = 1

[node name="h" type="HBoxContainer" parent="SearchDiag/WindowDialog/MarginContainer/v"]
margin_top = 54.0
margin_right = 226.0
margin_bottom = 78.0
alignment = 1

[node name="Label" type="Label" parent="SearchDiag/WindowDialog/MarginContainer/v/h"]
margin_top = 5.0
margin_right = 46.0
margin_bottom = 19.0
text = "Search:"

[node name="LineEdit" type="LineEdit" parent="SearchDiag/WindowDialog/MarginContainer/v/h"]
margin_left = 50.0
margin_right = 186.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="ButtonFind" type="Button" parent="SearchDiag/WindowDialog/MarginContainer/v/h"]
margin_left = 190.0
margin_right = 226.0
margin_bottom = 24.0
text = "find"

[node name="Label" type="Label" parent="SearchDiag/WindowDialog/MarginContainer/v"]
modulate = Color( 1, 1, 1, 0.6 )
margin_top = 82.0
margin_right = 226.0
margin_bottom = 96.0
align = 1
valign = 1

[node name="ButtonFile" type="MenuButton" parent="."]
margin_left = 8.0
margin_right = 64.0
margin_bottom = 24.0
text = "Import"
items = [ "csv", null, 0, false, false, 0, 0, null, "", false, "dict", null, 0, false, false, 1, 0, null, "", false, "tres", null, 0, false, false, 2, 0, null, "", false ]
script = ExtResource( 1 )

[node name="ButtonSave" type="Button" parent="."]
margin_left = 68.0
margin_right = 109.0
margin_bottom = 24.0
text = "Save"
flat = true

[node name="ButtonUndo" type="Button" parent="."]
margin_left = 113.0
margin_right = 159.0
margin_bottom = 24.0
text = "Undo"
flat = true

[node name="MenuButtonCol" type="MenuButton" parent="."]
visible = false
margin_left = 115.0
margin_right = 175.0
margin_bottom = 24.0
text = "column"
items = [ "insert column", null, 0, false, false, 0, 0, null, "", false, "delete column", null, 0, false, false, 1, 0, null, "", false, "move right", null, 0, false, false, 2, 0, null, "", false, "move left", null, 0, false, false, 3, 0, null, "", false ]
script = ExtResource( 3 )

[node name="MenuButtonRow" type="MenuButton" parent="."]
visible = false
margin_left = 179.0
margin_right = 214.0
margin_bottom = 24.0
text = "row"
items = [ "insert row", null, 0, false, false, 0, 0, null, "", false, "delete row", null, 0, false, false, 1, 0, null, "", false ]
script = ExtResource( 4 )

[node name="h" type="HBoxContainer" parent="."]
margin_left = 163.0
margin_right = 272.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="h"]
margin_top = 5.0
margin_right = 37.0
margin_bottom = 19.0
text = "Rows:"

[node name="ButtonAddRowAbove" type="TextureButton" parent="h"]
margin_left = 41.0
margin_right = 61.0
margin_bottom = 24.0
hint_tooltip = "Insert row above"
texture_normal = ExtResource( 7 )
script = ExtResource( 8 )

[node name="ButtonAddRowBelow" type="TextureButton" parent="h"]
margin_left = 65.0
margin_right = 85.0
margin_bottom = 24.0
hint_tooltip = "Insert row below"
texture_normal = ExtResource( 11 )
script = ExtResource( 8 )

[node name="TextureButtonDeleCurRow" type="TextureButton" parent="h"]
margin_left = 89.0
margin_right = 109.0
margin_bottom = 24.0
hint_tooltip = "Delete current row"
texture_normal = ExtResource( 6 )
script = ExtResource( 8 )
tint = Color( 1, 0, 0, 1 )

[node name="Button" type="Button" parent="."]
visible = false
margin_left = 214.0
margin_right = 280.0
margin_bottom = 24.0
text = "serialize"
flat = true

[node name="ButtonLoad" type="Button" parent="."]
visible = false
margin_left = 214.0
margin_right = 253.0
margin_bottom = 24.0
text = "load"

[node name="h2" type="HBoxContainer" parent="."]
margin_left = 276.0
margin_right = 408.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="h2"]
margin_top = 5.0
margin_right = 60.0
margin_bottom = 19.0
text = "Columns:"

[node name="TextureButton" type="TextureButton" parent="h2"]
margin_left = 64.0
margin_right = 84.0
margin_bottom = 24.0
texture_normal = ExtResource( 9 )
script = ExtResource( 8 )

[node name="TextureButton2" type="TextureButton" parent="h2"]
margin_left = 88.0
margin_right = 108.0
margin_bottom = 24.0
texture_normal = ExtResource( 5 )
script = ExtResource( 8 )

[node name="TextureButtonColClose" type="TextureButton" parent="h2"]
margin_left = 112.0
margin_right = 132.0
margin_bottom = 24.0
texture_normal = ExtResource( 6 )
script = ExtResource( 8 )
tint = Color( 1, 0, 0, 1 )

[node name="MoveMenu" type="MenuButton" parent="."]
margin_left = 412.0
margin_right = 459.0
margin_bottom = 24.0
text = "Move"
items = [ "Column move left", null, 0, false, false, 0, 0, null, "", false, "Column move right", null, 0, false, false, 1, 0, null, "", false ]
script = ExtResource( 12 )

[node name="ButtonSearch" type="TextureButton" parent="."]
margin_left = 463.0
margin_right = 483.0
margin_bottom = 24.0
texture_normal = ExtResource( 10 )
script = ExtResource( 8 )

[connection signal="file_selected" from="ButtonFromCSV/FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="pressed" from="ButtonFromCSV/csvOptions/VBoxContainer2/HBoxContainer/ButtonOk" to="." method="_on_ButtonOk_pressed"]
[connection signal="pressed" from="ButtonFromCSV/csvOptions/VBoxContainer2/HBoxContainer/ButtonCancel" to="." method="_on_ButtonCancel_pressed"]
[connection signal="pressed" from="SearchDiag/WindowDialog/MarginContainer/v/h/ButtonFind" to="." method="_on_ButtonFind_pressed"]
[connection signal="pressed" from="ButtonSave" to="." method="_on_ButtonSave_pressed"]
[connection signal="pressed" from="ButtonUndo" to="." method="_on_ButtonUndo_pressed"]
[connection signal="pressed" from="h/ButtonAddRowAbove" to="." method="_on_ButtonAddRowAbove_pressed"]
[connection signal="pressed" from="h/ButtonAddRowBelow" to="." method="_on_ButtonAddRowBelow_pressed"]
[connection signal="pressed" from="h/TextureButtonDeleCurRow" to="." method="_on_TextureButtonDeleCurRow_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="ButtonLoad" to="." method="_on_ButtonLoad_pressed"]
[connection signal="pressed" from="h2/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="h2/TextureButton2" to="." method="_on_TextureButton2_pressed"]
[connection signal="pressed" from="h2/TextureButtonColClose" to="." method="_on_TextureButtonColClose_pressed"]
[connection signal="pressed" from="ButtonSearch" to="." method="_on_ButtonSearch_pressed"]
